# hospo-mcp

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml
src/hospo_mcp/: __init__.py  config.py  server.py  web.py
src/hospo_mcp/auth/: __init__.py  oauth_routes.py  token_store.py
src/hospo_mcp/clients/: __init__.py  base.py  deputy.py  lightspeed.py  xero.py
src/hospo_mcp/prompts/: __init__.py  hospo_prompts.py
src/hospo_mcp/resources/: __init__.py  hospo_resources.py
src/hospo_mcp/tools/: __init__.py  deputy_tools.py  lightspeed_tools.py  nl_query_tool.py  xero_tools.py
tests/: test_clients.py  test_nl_query.py  test_oauth.py  test_server.py
