[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hospo-mcp"
version = "0.1.0"
description = "MCP server for hospitality systems — Lightspeed POS, Xero, Deputy"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "HospitalityOwner AI", email = "hello@hospitalityowner.ai" }
]
keywords = ["mcp", "hospitality", "pos", "xero", "deputy", "lightspeed"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mcp>=1.4.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "structlog>=24.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-httpx>=0.30.0",
  "httpx>=0.27.0",
  "black>=24.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
hospo-mcp = "hospo_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hospo_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
